src/test/ui/pattern/usefulness/integer-ranges/reachability.stderr
error: unreachable pattern
  --> $DIR/reachability.rs:16:17
   |
LL |     m!(0u8, 42, 42);
   |                 ^^
   |
note: the lint level is defined here
  --> $DIR/reachability.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:20:22
   |
LL |     m!(0u8, 20..=30, 20);
   |                      ^^

error: unreachable pattern
  --> $DIR/reachability.rs:21:22
   |
LL |     m!(0u8, 20..=30, 21);
   |                      ^^

error: unreachable pattern
  --> $DIR/reachability.rs:22:22
   |
LL |     m!(0u8, 20..=30, 25);
   |                      ^^

error: unreachable pattern
  --> $DIR/reachability.rs:23:22
   |
LL |     m!(0u8, 20..=30, 29);
   |                      ^^

error: unreachable pattern
  --> $DIR/reachability.rs:24:22
   |
LL |     m!(0u8, 20..=30, 30);
   |                      ^^

error: unreachable pattern
  --> $DIR/reachability.rs:27:21
   |
LL |     m!(0u8, 20..30, 20);
   |                     ^^

error: unreachable pattern
  --> $DIR/reachability.rs:28:21
   |
LL |     m!(0u8, 20..30, 21);
   |                     ^^

error: unreachable pattern
  --> $DIR/reachability.rs:29:21
   |
LL |     m!(0u8, 20..30, 25);
   |                     ^^

error: unreachable pattern
  --> $DIR/reachability.rs:30:21
   |
LL |     m!(0u8, 20..30, 29);
   |                     ^^

error: unreachable pattern
  --> $DIR/reachability.rs:34:22
   |
LL |     m!(0u8, 20..=30, 20..=30);
   |                      ^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:35:22
   |
LL |     m!(0u8, 20.. 30, 20.. 30);
   |                      ^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:36:22
   |
LL |     m!(0u8, 20..=30, 20.. 30);
   |                      ^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:38:22
   |
LL |     m!(0u8, 20..=30, 21..=30);
   |                      ^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:39:22
   |
LL |     m!(0u8, 20..=30, 20..=29);
   |                      ^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:41:24
   |
LL |     m!('a', 'A'..='z', 'a'..='z');
   |                        ^^^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:48:9
   |
LL |         5..=8 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:54:9
   |
LL |         5..15 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:61:9
   |
LL |         5..25 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:69:9
   |
LL |         5..25 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:75:9
   |
LL |         5..15 => {},
   |         ^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:82:9
   |
LL |         '\u{D7FF}'..='\u{E000}' => {},
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:103:9
   |
LL |         &FOO => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/reachability.rs:104:9
   |
LL |         BAR => {}
   |         ^^^

error: aborting due to 24 previous errors

